Various small changes

--- a/src/main/resources/org/sola/cs/messages/service/Bundle.properties
+++ b/src/main/resources/org/sola/cs/messages/service/Bundle.properties
@@ -389,3 +389,9 @@ ser_ot077.type = ERROR
 
 ser_ot078.message = For claims split, there must be 1 claim to split and at least 2 new claims as a result of split.
 ser_ot078.type = ERROR
+
+ser_ot079.message = Provided identificator number already exists.
+ser_ot079.type = ERROR
+
+ser_ot080.message = Manual identificator number must be less than 400.
+ser_ot80.type = ERROR
