Created status was reverted into the system

--- a/src/main/resources/org/sola/cs/messages/service/Bundle.properties
+++ b/src/main/resources/org/sola/cs/messages/service/Bundle.properties
@@ -394,4 +394,16 @@ ser_ot079.message = Provided identificator number already exists.
 ser_ot079.type = ERROR
 
 ser_ot080.message = Manual identificator number must be less than 400.
-ser_ot80.type = ERROR
+ser_ot080.type = ERROR
+
+ser_ot081.message = North adjacency and its type are required
+ser_ot081.type = ERROR
+
+ser_ot082.message = South adjacency and its type are required
+ser_ot082.type = ERROR
+
+ser_ot083.message = East adjacency and its type are required
+ser_ot083.type = ERROR
+
+ser_ot084.message = West adjacency and its type are required
+ser_ot084.type = ERROR
